--- a/src/style/app.css
+++ b/src/style/app.css
@@ -34,10 +34,10 @@ a.btn {
   background: #ddd;
   border: 1px solid #aaa;
   border-radius: .25rem;
-  color: #222;
+  color: #111;
   cursor: pointer;
   font-size: medium;
-  padding: .3rem 1rem;
+  padding: .25rem .9rem;
   text-decoration: none;
 }
 
@@ -78,7 +78,7 @@ img {
     background: white;
     color: black;
     font: 1.1rem/1.5 serif;
-    font-family: 'Viaoda Libre', cursive, serif;
+    font-family: 'Viaoda Libre', 'DejaVu Serif', 'DejaVuSans', cursive, serif;
     margin: 0 1rem;
   }
 
